fixed page padding on mobile

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -57,7 +57,7 @@ img {
   html {
     font-size: 13px;
   }
-  .content {
+  .content-body {
     padding: 80px 2.5vw 40px;
   }
 }
@@ -65,7 +65,7 @@ img {
   html {
     font-size: 11px;
   }
-  .content {
+  .content-body {
     padding: 30px 10px 20px;
   }
 }
